# src/identity/src/CodeForCoders.Identity.Application/UseCases/Accounts/GetStudentContact/IGetStudentContact.cs
@@ -1,0 +1,5 @@
+using CodeForCoders.Identity.Application.Interfaces;
+
+namespace CodeForCoders.Identity.Application.UseCases.Accounts.GetStudentContact;
+
+public interface IGetStudentContact : IUseCase<GetStudentContactInput, StudentContact>;
